# money-matcher

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: rust.yml
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/client/src/fix/: tcp.rs  (+2 more)
crates/core/: Cargo.toml
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  main.rs
crates/engine/src/cli_args/: mod.rs
crates/engine/src/data_generator/: event_logger.rs  event_router.rs  event_source.rs  mod.rs  order_generators.rs  rate_controllers.rs  type_selectors.rs
crates/engine/src/event_logger/: mod.rs
crates/engine/src/event_recorder/: mod.rs
crates/engine/src/fix/: engine.rs  mod.rs  session.rs  tcp.rs
crates/engine/src/limit_order_book/: mod.rs
crates/engine/src/lob/: limitorder.rs  limitorderbook.rs  market_events.rs  mod.rs  order.rs  types.rs
crates/engine/src/logging/: mod.rs
crates/engine/src/moldudp64/: engine.rs  mod.rs  sequencerpublisher.rs
crates/engine/src/moldudp64_engine/: engine.rs  mod.rs  publisher.rs  sequencer.rs  sequencerpublisher.rs  tests.rs  types.rs  udp.rs
crates/engine/src/order/: limit.rs
crates/engine/src/order_gateway/: gateway.rs  merger.rs  mod.rs  poller.rs
crates/engine/src/simulator/: latency_config.rs  mod.rs  simulator.rs
crates/l2_interpolator/: Cargo.toml
crates/l2_interpolator/src/: main.rs
crates/mm_core/: Cargo.toml
crates/mm_core/src/: lib.rs
crates/mm_core/src/fix_core/: helpers.rs  iterator.rs  mod.rs  session.rs
crates/mm_core/src/fix_core/messages/: execution_report.rs  heartbeat.rs  logon.rs  mod.rs  new_order_single.rs  order_cancel.rs  order_cancel_reject.rs  order_cancel_replace.rs  resend_request.rs  test_request.rs  types.rs
crates/mm_core/src/itch_core/: helpers.rs
crates/mm_core/src/itch_core/messages/: add_order.rs  mod.rs  order_cancel.rs  order_delete.rs  order_executed.rs  order_executed_with_price.rs  order_replace.rs
crates/mm_core/src/lob_core/: market_events.rs  market_orders.rs  mod.rs
crates/mm_core/src/moldudp64_core/: sessions.rs  types.rs
crates/moldudp64-client/src/: udp.rs
crates/moldudp64-core/: Cargo.toml
crates/moldudp64-core/src/: lib.rs  packet.rs  sessions.rs  tests.rs  types.rs
crates/moldudp64-engine/: Cargo.toml
crates/moldudp64-engine/src/: engine.rs  tests.rs  types.rs  udp.rs
crates/netlib/: Cargo.toml
crates/netlib/src/: lib.rs
crates/pyclient/: Cargo.toml  pyclient.pyi  pyproject.toml
crates/pyclient/src/: lib.rs
crates/pyclient/src/fix/: client.rs
crates/pyclient/src/lob/: limit_order_book.rs
crates/pyclient/src/moldudp64/: client.rs  mod.rs  receiverhandler.rs
crates/pylob/: Cargo.toml  pyproject.toml
crates/pylob/src/: lib.rs  limit_order_book.rs
graphs/: cache_benchmark.sh  cache_benchmark_10000.csv  cache_benchmark_100000.csv  cache_benchmark_1000000.csv  cache_benchmark_10000000.csv  cop.sh  graph.py  run_time_benchmark.sh  run_time_benchmark_10000.csv  run_time_benchmark_100000.csv  run_time_benchmark_1000000.csv  run_time_benchmark_10000000.csv
gui/src/: main.py
gui/src/controllers/: candlestick.py  performance_tracker.py  simulated_execution_engine.py  strategy_runner.py
gui/src/models/: bot_model.py  order_book_model.py  performance_model.py  trade_history_model.py
gui/src/widgets/: sidebar.py
gui/src/windows/: bots.py  dashboard.py  performance.py  strategies.py
(+45 files in other folders)
