[project]
name = "money-matcher"
version = "1.0.0"
description = "Client application for the HFT Sim"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightweight-charts==2.1",
    "maturin==1.13.1",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "pyo3-stubgen==0.3.0",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.18.0",
    "pyqtgraph==0.14.0",
    "pyqtwebengine==5.15.7",
    "pyqtwebengine-qt5==5.15.2",
    "python-dateutil==2.9.0.post0",
    "pythonnet==3.0.5",
    "pytz==2026.1.post1",
    "pywebview==6.1",
    "qscintilla==2.14.1",
    "six==1.17.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
]
