[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
circular-buffer = "1.2.0"
fastrand = "2.3.0"
mio = { version = "1.1.1", features = ["net", "os-poll"] }
core = {path = "../core"}
nexus-queue = "1.0.0"
rand = "0.10.0"
rand_chacha = "0.10.0"
rand_distr = "0.6.0"
ringbuf = "0.4.8"
smallrand = "1.0.1"
zerocopy = { version = "0.8.39", features = ["derive"] }
socket2 = "0.6.3"