[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
circular-buffer = "1.2.0"
clap = { version = "4.6.0", features = ["derive"] }
ctrlc = "3.5.2"
fastrand = "2.3.0"
memmap2 = "0.9.10"
mio = { version = "1.1.1", features = ["net", "os-poll"] }
mm_core = {path = "../mm_core"}
rand = "0.10.0"
rand_chacha = "0.10.0"
rand_distr = "0.6.0"
ringbuf = "0.4.8"
rkyv = "0.8.15"
serde = "1.0.228"
smallrand = "1.0.1"
socket2 = "0.6.3"
