[package]
name = "mm_core"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
itoa = "1.0.17"
mio = { version = "1.1.1", features = ["net", "os-poll"] }
pyo3 = "0.27.0"
pyo3-stub-gen = { version = "0.19.0", default-features = false }
ringbuf = "0.4.8"
rkyv = "0.8.15"
time = { version = "0.3.47", features = ["formatting", "parsing", "macros", "local-offset"] }

