[package]
name = "pyclient"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyclient"
crate-type = ["cdylib", "rlib"]

[dependencies]
bytes = "1.11.1"
engine = { path = "../engine" }
mio = { version = "1.1.1", features = ["net", "os-poll"] }
mm_core = {path = "../mm_core"}
pyo3 = "0.27.0"
pyo3-stub-gen = { version = "0.19.0", default-features = false }
ringbuf = "0.4.8"
socket2 = "0.6.3"