[package]
name = "pylob"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pylob"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.27.0"
engine = { path = "../engine" }
pyo3-stub-gen = "0.19.0"
